--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
     PORT = 3000
     MONGO_DB_USER = root
-    MONGO_DB_PASSWORD= admin
+    MONGO_DB_PASSWORD= root
     MONGO_DB_DATABASE= flipkart-demo
     JWT_SECRET = "MERNSECRET"
